--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.1.1
   go_router: ^12.1.3
+  just_audio: ^0.9.36
 
 dev_dependencies:
   flutter_test:
@@ -54,11 +55,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/music/
   fonts:
     - family: Permanent Marker
       fonts:
